Fixed z-index for buttons

--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
   position: absolute;
   top: calc(100dvh - 70px);
   left: 80px;
-  z-index: 1100;
+  z-index: 900;
   background-color: rgba(0, 0, 0, 0.7);
   backdrop-filter: blur(4px);
   border: 1px solid rgba(255, 255, 255, 0.1);
@@ -51,7 +51,7 @@
   top: calc(100dvh - 70px);
   padding-bottom: env(safe-area-inset-bottom);
   left: 20px;
-  z-index: 1100;
+  z-index: 900;
   background-color: rgba(0, 0, 0, 0.7);
   backdrop-filter: blur(4px);
   border: 1px solid rgba(255, 255, 255, 0.1);
@@ -84,7 +84,7 @@
   top: calc(100dvh - 70px);
   padding-bottom: env(safe-area-inset-bottom);
   left: 140px;
-  z-index: 1100;
+  z-index: 900;
   background-color: rgba(0, 0, 0, 0.7);
   backdrop-filter: blur(4px);
   border: 1px solid rgba(255, 255, 255, 0.1);
